# Magenta

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  AUTHENTICATION.md  CLAUDE.md  COMPLETE_SUMMARY.md  Dockerfile.headless  FEATURE_PROXY_AUTO_RETRY.md  FEATURE_PROXY_IMPLEMENTATION_REPORT.md  FINAL_ANSWER.md  FINAL_REPORT.md  HANDOFF.md  HCP_MAGNET_STATUS.md  HCP_MAGNET_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KARPATHY_LOOPS_ANALYSIS.md  MCP_INTEGRATION_COMPLETE.md  MCP_INTEGRATION_RESEARCH.md  MCP_PI_INTEGRATION_RESEARCH.md  MODEL_DISCOVERY_EXPLAINED.md  MULTIAGENT_REVELATION.md  PANTHEON_SKILLS_MIGRATION_PLAN.md  PANTHEON_SKILLS_MIGRATION_REPORT.md  PANTHEON_SKILLS_VERIFICATION.md  README.md  SELF_EVO_GUIDE.md  SKILLS_RESTRUCTURE_PLAN.md  SONNET5_MAX_FIX.md  SUCCESS_REPORT.md  THINKING_LEVEL_FIX.md  WORKFLOW_REFACTOR_PLAN.md  biome.json  fix_skill_refs.py  migrate_pantheon_skills.py  package-lock.json  package.json  playwright.config.ts  test.sh  (+1 more)
.research/: README.md
.tmp/: NatureBench_problem.md  biomni_problem.md
HarnessComponentProtocol/: HcpClient.ts  README-harness.md  README.md  eslint.config.mjs  harness.toml  index.ts  package.json  vitest.config.ts
Magenta/: .gitignore  README.md  package.json
brands/: README.md  brand.interface.ts  registry.toml
docs/: ARCHITECTURE.md  AUTHENTICATION.md  BRANDING.md  CHINA_NETWORK.md  DEVELOPING.md  DISTRIBUTION_WITHOUT_MANUAL_SEND.md  ONE_CLICK_INSTALL.md  PUBLIC_SNAPSHOT.md  QUICKEST_INSTALL.md  QUICKSTART.md  README.md  (+7 more)
harness/tools/ast-edit-plan/magenta/process-tools/: Cargo.toml
(+1757 files in other folders)
