[package]
name = "magenta-process-tools"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Minions-Land/Magenta"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
globset = "0.4"
ureq = { version = "2", features = ["json"] }
url = "2"
urlencoding = "2"
ast-grep-core = { version = "0.39", default-features = false, features = ["tree-sitter"] }
tree-sitter = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"

[[bin]]
name = "magenta-process-tools"
path = "src/main.rs"
